--- a/src/pages/staff/StaffProducts.css
+++ b/src/pages/staff/StaffProducts.css
@@ -25,6 +25,7 @@
 
 .products-table {
     width: 100%;
+    min-width: 1000px;
     border-collapse: collapse;
 }
 
@@ -46,6 +47,7 @@
     font-size: 0.8125rem;
     border-bottom: 1px solid var(--border-light);
     vertical-align: middle;
+    white-space: nowrap;
 }
 
 .product-row:hover {
